--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,6 +38,8 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
       - name: npm install and build
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
         run: |
           npm install
           npm run build
